# SqliteShortcutDemo

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
addons/QHotkey/: qhotkey.cpp  qhotkey.h  qhotkey_p.h  qhotkey_win.cpp
v1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
